# kopejka-test

backend/: .gitignore  alembic.ini  main.py  pyproject.toml  test_api.py
backend/app/: main.py
backend/app/api/: apartments.py  auth.py  bookings.py  deps.py
backend/app/core/: config.py  s3.py  security.py
backend/app/db/: database.py  models.py
backend/app/repositories/: apartment_repository.py  booking_repository.py  user_repository.py
backend/app/schemas/: apartment.py  booking.py  user.py
backend/app/services/: apartment_service.py  auth_service.py  booking_service.py
backend/migrations/: env.py
backend/migrations/versions/: 08262574bf79_.py  e1e5b1def0fa_add_column_name_and_price.py  f8de2dd871cc_add_user_profile_fields.py
backend/tests/: conftest.py  test_apartments.py  test_auth.py  test_bookings.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/apartments/[id]/: page.tsx
frontend/app/apartments/[id]/bookings/: page.tsx
frontend/app/apartments/[id]/edit/: page.tsx
frontend/app/apartments/create/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/bookings/: page.tsx
frontend/components/: map-picker.tsx  navbar.tsx  spinner.tsx
frontend/components/ui/: input.tsx
frontend/lib/: api.ts  store.ts  utils.ts
frontend/tests/: apartments.spec.ts  auth.spec.ts  home.spec.ts
